<?xml version="1.0"?>
<package>
  <name>gaze_tracker</name>
  <version>1.0.0</version>
  <description>CNN based Gaze Tracker</description>

  <author email="asaran@cs.utexas.edu">Akanksha Saran</author>
  <author email="srinjoy.majumdar@utexas.edu">Srinjoy Majumdar</author>
  <maintainer email="srinjoy.majumdar@utexas.edu">Srinjoy Majumdar</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>rail_object_detector</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>rosbridge_server</build_depend>
  <build_depend>web_video_server</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>rail_object_detector</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>web_video_server</run_depend>

  <export>
  </export>
</package>
